--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "nouislider": "^14.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^1.5.16"
   },
   "devDependencies": {
