--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.10.7",
-    "vuetify": "^1.5.16"
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
