--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,7 @@ pycodestyle==2.5.0
 pylint==2.3.1
 python-dateutil==2.8.0
 python-editor==1.0.4
+PyTransmit==0.1
 PyYAML==5.1.1
 six==1.12.0
 SQLAlchemy==1.3.5
